Reset the hardware like other drivers do for better compatibility with more chip firmware versions.

From (and should fix) PR kern/53913.